2000-07-25  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (print_operand, case 'T'): New case.

	* rs6000.md (call_indirect_aix32): Convert to expander of
	scheduled instructions.
	(call_indirect_aix64): Likewise.
	(call_value_indirect_aix{32,64}): Likewise.
	(call, call_value): Invoke expanders for AIX.  Fall through to
	matchers for SysV.
	(call_indirect_nonlocal_aix{32,64}): New patterns (ctr and lr).
	(call_value_indirect_nonlocal_aix{32,64}): New patterns.
	(call_nonlocal_aix32): Remove CALL_LONG alternative.  Operand 1
	only "g" constraint.
	(call_nonlocal_aix64): Likewise.
	(call_value_nonlocal_aix{32,64}): Likewise.
	(call_nonlocal_sysv): New pattern for ctr, lr, and symbolic
	operands.
	(call_value_nonlocal_sysv): New pattern.
	(indirect_jump{si,di}): Use new 'T' modifier.
	(tablejump{si,di} matchers): Likewise.
	(return_internal_{si,di}): Likewise.
	(return_eh_{si,di}): Likewise.

2000-07-24  Richard Henderson  <rth@cygnus.com>

	* config/ia64/ia64.c (ia64_print_operand): Handle "%,".
	* config/ia64/ia64.h (PRINT_OPERAND_PUNCT_VALID_P): Likewise.
	* config/ia64/ia64.md (movdi_internal): Use it.

2000-07-24  Zack Weinberg  <zack@wolery.cumb.org>

	* cppexp.c: Warn about unary + if -Wtraditional.
	* cpplex.c (lex_line): Always set BOL on the first token of a line.

2000-07-24  Michael Meissner  <meissner@redhat.com>

	* d30v.h (FUNCTION_ARG_KEEP_AS_REFERENCE): Delete references to
	unsupported macro.

2000-07-24  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (emit_multi_reg_push): Generate a
	REG_FRAME_RELEATED_NOTE that is compatable with the code in
	dwarf2out_debug_frame_expr.

2000-07-24  Jason Merrill  <jason@redhat.com>

	* dwarf2out.c: Complain if DWARF2_DEBUGGING_INFO is defined without
	UNALIGNED_INT_ASM_OP.
	(def_cfa_1): Don't emit def_cfa_register or def_cfa_offset to adjust
	a location expression.
	(dwarf2out_frame_debug_expr): Lose cfa_old_reg stuff.  Don't 
	assume indirect access if we're saving the CFA address exactly.
