@@ -1,3 +1,7 @@
+2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* decl.c: Remove all signal handling code, now done in toplev.c.
+
 2000-07-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* decl.c (make_rtl_for_nonlocal_decl): Rework.
